DDL出力処理、ERMファイル保存処理を改変しやすいように修正